--- a/examples/hub.ipynb
+++ b/examples/hub.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Ultralytics HUB",
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -50,28 +34,29 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "FyDnXd-n4c7Y",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "FyDnXd-n4c7Y",
         "outputId": "22dcbc27-9c6f-44fb-9745-620431f93793"
       },
-      "source": [
-        "%pip install ultralytics  # install\n",
-        "from ultralytics import YOLO, checks, hub\n",
-        "checks()  # checks"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "Ultralytics YOLOv8.0.64 🚀 Python-3.9.16 torch-2.0.0+cu118 CUDA:0 (Tesla T4, 15102MiB)\n",
             "Setup complete ✅ (2 CPUs, 12.7 GB RAM, 28.3/166.8 GB disk)\n"
           ]
         }
+      ],
+      "source": [
+        "\n",
+        "%pip install ultralytics  # install\n",
+        "from ultralytics import YOLO, checks, hub\n",
+        "checks()  # checks"
       ]
     },
     {
@@ -87,17 +72,33 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "XSlZaJ9Iw_iZ"
       },
+      "outputs": [],
       "source": [
         "hub.login('API_KEY')  # use your API key\n",
         "\n",
         "model = YOLO('https://hub.ultralytics.com/MODEL_ID')  # use your model URL\n",
         "model.train()  # train model"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "name": "Ultralytics HUB",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
